--- a/css/styles.css
+++ b/css/styles.css
@@ -171,22 +171,6 @@ ul {
     color: var(--accent-color);
 }
 
-.site-auth .link-contact::before {
-    display: block;
-    content: '';
-    height: 16px;
-    background-repeat: no-repeat;
-    background-position: center;
-   }
-
-.envelope::before {
-    background-image: url(../images/envelope.svg);
-}
-
-.smartphone::before {
-    background-image: url(../images/smartphone.svg);
-}
-
 /* Hero */
 
 .hero {
@@ -241,7 +225,6 @@ ul {
 }
 
 .team-list .title {
-    margin-top: 30px;
     margin-bottom: 10px;
 
     color: var(--title-text-color);
@@ -261,7 +244,7 @@ ul {
 
 .button {
     display: inline-block;
-    border-radius:4px;
+    border-radius: 4px;
     padding: 10px 32px;
     min-width: 200px;
     border: 1px solid transparent;
@@ -269,7 +252,7 @@ ul {
     color: var(--hero-text-color);
     background-color: var(--accent-color);
     font-family: inherit;
-    cursor:pointer;
+    cursor: pointer;
     text-align: center;
 }
 
@@ -293,7 +276,7 @@ ul {
     font-size: 16px;
     line-height: 1.63;
     letter-spacing: 0.03em;
-    cursor:pointer;
+    cursor: pointer;
 }
 
 .button-secondary {
@@ -309,7 +292,7 @@ ul {
     font-size: 16px;
     line-height: 1.63;
     letter-spacing: 0.03em;
-    cursor:pointer;
+    cursor: pointer;
 }
 
 .button:hover,
@@ -342,6 +325,12 @@ ul {
 .section.team {
     padding-top: 94px;
     padding-bottom: 94px;
+    background-color: #F5F4FA;
+}
+
+.section.clients {
+    padding-top: 94px;
+    padding-bottom: 94px;
 }
 
 .section.footer {
@@ -369,40 +358,37 @@ ul {
     width: 270px;
 }
 
-
 .feature-list .item:not(:last-child) {
     margin-right: 30px;
 }
 
-.feature-list .item::before {
+.thumb {
     display: block;
-    content: '';
+    border: none;
+    width: 270px;
     height: 120px;
-    background-repeat: no-repeat;
+    background-color: #F5F4FA;
     background-position: center;
-    background-color:  #F5F4FA;
+    background-size: contain;
+    background-repeat: no-repeat; 
     border-radius: 4px;
     margin-bottom: 30px;
 }
 
-.icon-antenna::before {
-    background-image: url(../images/antenna.svg);
-    background-size: 65.32px 70px;
+.thumb.antenna {
+    padding: 25px 102.34px;
 }
 
-.icon-clock::before {
-    background-image: url(../images/clock.svg);
-    background-size: 66.96px 70px;
+.thumb.clock {
+    padding: 25px 102.34px;
 }
 
-.icon-diagram::before {
-    background-image: url(../images/diagram.svg);
-    background-size: 70px 53.69px;
+.thumb.diagram {
+    padding: 33.15px 100px;
 }
 
-.icon-astronaut::before {
-    background-image: url(../images/astronaut.svg);
-    background-size: 70px 70px;
+.thumb.astronaut {
+    padding: 25px 100px;
 }
 
 /* Чим ми займаємось */
@@ -430,6 +416,64 @@ ul {
 .team-list .item {
     padding-bottom: 30px;
 }
+
+.position {
+    margin-bottom: 16px;
+}
+
+.social-links {
+    display: flex;
+    padding-left: 0;
+    justify-content: center;
+}
+
+.social-links-item {
+    display: block;
+    padding: 12px 12px;
+}
+
+.social-links-item:not(:last-child) {
+    margin-right: 10px;
+}
+
+.team-item-description {
+    padding-top: 30px;
+    background-color: #FFFFFF;
+    border-right: 1px solid #EEEEEE;
+    border-bottom: 1px solid #EEEEEE;
+    border-left: 1px solid #EEEEEE;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+}
+
+/* Постоянные клиенты */
+
+.clients-list {
+    display: flex;
+    padding-left: 0;
+}
+
+.clients-list .item:not(:last-child) {
+    margin-right: 30px;
+}
+
+.thumb-clients {
+    display: block;
+    padding: 16px 32px;
+    width: 170px;
+    height: 92px;
+    box-sizing: border-box;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat; 
+    border-radius: 4px;
+    border: 1px solid #AFB1B8;
+}
+
+/* .social-links .social-link:hover,
+.social-links .social-link:focus {
+    color: var(--accent-color);
+} */
 
 /* Portfolio */
 
@@ -492,7 +536,7 @@ ul {
 /* Footer */
 
 .section.footer {
-    background-color: #E5E5E5;
+    background-color: #2F303A;
 }
 
 .address .street {
@@ -515,4 +559,25 @@ ul {
 .section.footer .logo {
     padding-top: 0;
     padding-bottom: 0;
+}
+
+.container.footer {
+    display: flex;
+    padding-left: 0;
+}
+
+.join {
+    display:block;
+    margin-left: 70px;
+    align-items: center;
+}
+
+.join .title {
+    margin-bottom: 20px;
+    
+    color: #FFFFFF;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-transform: uppercase;
 }
