--- a/css/styles.css
+++ b/css/styles.css
@@ -157,18 +157,22 @@ ul {
     color: #757575;
 }
 
-.site-auth .link-contact.current {
-    color: var(--accent-color);
-}
-
 .site-auth .link-contact:hover,
 .site-auth .link-contact:focus {
     color: var(--accent-color);
 }
 
-.site-auth .link-contact.current:hover,
-.site-auth .link-contact.current:focus {
-    color: var(--accent-color);
+.site-auth .icon {
+    text-decoration: none;
+    line-height: 1.14;
+    fill: #757575;
+
+}
+
+.site-auth .icon:hover,
+.site-auth .icon:focus {
+    fill: var(--accent-color);
+    cursor: pointer;
 }
 
 /* Hero */
@@ -302,13 +306,14 @@ ul {
 
 .button-primary:hover,
 .button-primary:focus {
-    color: var(--accent-color);
+    /* color: var(--accent-color); */
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
-
 
 .button-secondary:hover,
 .button-secondary:focus {
     color: var(--accent-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 /* Section */
@@ -430,10 +435,19 @@ ul {
 .social-links-item {
     display: block;
     padding: 12px 12px;
+    width: 44px;
+    height: 44px;
+    border: none;
+    border-radius: 50%;
 }
 
 .social-links-item:not(:last-child) {
     margin-right: 10px;
+}
+
+.social-links-item:hover,
+.social-links-item:focus {
+    background-color: var(--accent-color);
 }
 
 .team-item-description {
@@ -445,6 +459,18 @@ ul {
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
 }
+
+.social-links .social-link {
+    text-decoration: none;
+    fill: #AFB1B8;
+}
+
+.social-links .social-link:hover,
+.social-links .social-link:focus {
+    fill: #FFF;
+    cursor: pointer;
+}
+
 
 /* Постоянные клиенты */
 
@@ -470,10 +496,16 @@ ul {
     border: 1px solid #AFB1B8;
 }
 
-/* .social-links .social-link:hover,
-.social-links .social-link:focus {
-    color: var(--accent-color);
-} */
+.thumb-clients .client {
+    text-decoration: none;
+    fill: #AFB1B8;
+}
+
+.thumb-clients .client:hover,
+.thumb-clients .client:focus {
+    fill: var(--accent-color);
+    cursor: pointer;
+}
 
 /* Portfolio */
 
@@ -519,6 +551,14 @@ ul {
 .work-lists .item {
     margin-bottom: 30px;
     width: calc((100% - 60px) / 3);
+}
+
+.work-lists .item:hover,
+.work-lists .item:focus {
+/* border: 1px solid #EEEEEE;
+box-sizing: border-box; */
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+    cursor: pointer;
 }
 
 .work-lists .item:nth-last-child(-n + 3) {
