background-icons-hover-focus-new

--- a/css/styles.css
+++ b/css/styles.css
@@ -452,6 +452,7 @@ ul {
 
 .team-item-description {
     padding-top: 30px;
+    padding-bottom: 30px;
     background-color: #FFFFFF;
     border-right: 1px solid #EEEEEE;
     border-bottom: 1px solid #EEEEEE;
